<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/iv_drawer"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/open_menu"
                        android:src="@drawable/ic_menu"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/app"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_lite_border"
            android:padding="12dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/tv_ad_blocked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="45"
                android:gravity="center"
                android:text="@string/ads_blocked_n_0"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_data_saved"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="45"
                android:gravity="center"
                android:text="@string/data_saved_n_0_mb"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="6dp"
            android:background="@color/colorLightGrey" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="12dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="64dp">

                <ImageButton
                    android:id="@+id/vpn_toggle"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/power_toggle_bg"
                    android:contentDescription="@string/vpn_toggle_description"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/power_toggle" />
            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <TextView
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/status_description"
            android:gravity="center"
            android:text="@string/notification_stopped"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/main_menu_header"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>
